# x40paraguide

./: LICENSE  README.md  assemble.html  cmt.html  cuda.html  fma.html  index.html  search_index.json  x40.html
docs/: assemble.html  author.html  bookdown.epub  cache.html  cmt.html  csimd.html  cuda-adv.html  cuda.html  float.html  fma.html  gpuintro.html  index.html  nsight.html  part1.html  part2.html  references.html  search_index.json  x40.html
guide/: cache.html  cuda-adv.html  nsight.html
samples/cuda/: cumuladd.cu  texture1D.cu  texture3D.cu
samples/cuda-cmake/: CMakeLists.txt  multi_add.cu  multi_add.h  multi_add_cuda.cpp
samples/curoot/: sharedlib.cu  sharedlib.h
samples/simd/: muladd.c  muladd_simd.c  muladd_simd_asm.c  muladd_simd_r.c
samples/threads/: muladd_mt.c
src/: 00-author.Rmd  01-introduction.Rmd  02-c_para.Rmd  03-cuda.Rmd  04-advanced.Rmd  05-nsight.Rmd  06-example.Rmd.del  07-append.Rmd  08-references.Rmd  _bookdown.yml  _output.yml  book.bib  index.Rmd
src/figs/fig1/: cudaf1.afdesign
src/figs/fig2/: memcpy2D.afdesign
src/figs/fig3/: float.afdesign
src/figs/fig4/: cache.afdesign
src/latex/: before_body.tex  preamble.tex
